[gd_scene load_steps=44 format=3 uid="uid://b1h5m2ppiw4vh"]

[ext_resource type="PackedScene" uid="uid://chwlc165oosec" path="res://prefabs/deck.tscn" id="1_jbj1t"]
[ext_resource type="Script" uid="uid://bi4lbv7qlpbhu" path="res://scripts/main.gd" id="1_og1vs"]
[ext_resource type="PackedScene" uid="uid://b3vo520r8182e" path="res://prefabs/button_hit_me.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://cl4mmmslmit10" path="res://prefabs/button_stay.tscn" id="4_muem4"]
[ext_resource type="PackedScene" uid="uid://c8erksjsu8k07" path="res://prefabs/draw_pile_card_2.tscn" id="4_tefeu"]
[ext_resource type="Script" uid="uid://bctitgmwr1tw7" path="res://scripts/player_score.gd" id="5_jbj1t"]
[ext_resource type="PackedScene" uid="uid://cyklelnhty7k7" path="res://prefabs/button_shop.tscn" id="5_og1vs"]
[ext_resource type="Script" uid="uid://c1t7hshml7k8c" path="res://scripts/player_hand.gd" id="5_tbgi4"]
[ext_resource type="Texture2D" uid="uid://cixxgfjcgp7cf" path="res://sprites/score_hand.png" id="6_fuf3a"]
[ext_resource type="Theme" uid="uid://7ooqas1vm0iv" path="res://fonts/bold_pixels.tres" id="6_kmb1v"]
[ext_resource type="Script" uid="uid://bdyqhpvilr4ae" path="res://scripts/draw_pile.gd" id="6_o6xl0"]
[ext_resource type="PackedScene" uid="uid://b02tjccco401u" path="res://prefabs/draw_pile_card_3.tscn" id="8_jkv2x"]
[ext_resource type="PackedScene" uid="uid://b0jrt74sfm6hj" path="res://prefabs/score_counter.tscn" id="9_j8jky"]
[ext_resource type="PackedScene" uid="uid://bf32fhycbv7w8" path="res://prefabs/draw_pile_card_4.tscn" id="9_jbj1t"]
[ext_resource type="PackedScene" uid="uid://dtvgxpntqs5v0" path="res://prefabs/draw_pile_card_5.tscn" id="10_muem4"]
[ext_resource type="Script" uid="uid://5dj56ianjbtp" path="res://scripts/pot.gd" id="10_y6deb"]
[ext_resource type="Texture2D" uid="uid://b1qm3r1fnpfgu" path="res://sprites/score_money.png" id="11_c6pm6"]
[ext_resource type="PackedScene" uid="uid://c7ti6xfyw7foe" path="res://prefabs/draw_pile_card_6.tscn" id="11_dp3eg"]
[ext_resource type="Texture2D" uid="uid://cxmc514kcxc7k" path="res://sprites/score_score.png" id="11_pibwh"]
[ext_resource type="PackedScene" uid="uid://cr2e5bktwu0w2" path="res://prefabs/draw_pile_card_7.tscn" id="12_0ld40"]
[ext_resource type="PackedScene" uid="uid://b0afbqqfy5udi" path="res://prefabs/shop_card_2.tscn" id="12_y6deb"]
[ext_resource type="Script" uid="uid://dmtbhf6wfa3tk" path="res://scripts/items.gd" id="13_2f3dj"]
[ext_resource type="PackedScene" uid="uid://b40332jgpw1gc" path="res://prefabs/draw_pile_card_8.tscn" id="13_gqmmt"]
[ext_resource type="Script" uid="uid://chne6i3jkuqnv" path="res://scripts/camera.gd" id="14_2wyq8"]
[ext_resource type="PackedScene" uid="uid://bisqk3m3bvmr4" path="res://prefabs/button_return_to_board.tscn" id="14_vxglm"]
[ext_resource type="PackedScene" uid="uid://iqsu6i3b0u0f" path="res://prefabs/draw_pile_card_9.tscn" id="14_yc10j"]
[ext_resource type="PackedScene" uid="uid://3bgk4m7now57" path="res://prefabs/draw_pile_card_10.tscn" id="15_jscy8"]
[ext_resource type="PackedScene" uid="uid://bvwysdendpd8c" path="res://prefabs/shop_card_3.tscn" id="15_kmb1v"]
[ext_resource type="PackedScene" uid="uid://cc7wbtqns7rkp" path="res://prefabs/shop_card_4.tscn" id="16_fuf3a"]
[ext_resource type="PackedScene" uid="uid://5lqg468fawd3" path="res://prefabs/shop_card_5.tscn" id="17_pibwh"]
[ext_resource type="PackedScene" uid="uid://bmrkr0wwmt25c" path="res://prefabs/shop_card_6.tscn" id="18_c6pm6"]
[ext_resource type="PackedScene" uid="uid://b1wtdl1uokp1p" path="res://prefabs/shop_card_7.tscn" id="19_5he1u"]
[ext_resource type="PackedScene" uid="uid://dhf1m6xeyyem2" path="res://prefabs/shop_card_8.tscn" id="20_5poiv"]
[ext_resource type="PackedScene" uid="uid://ckawjr4do6p27" path="res://prefabs/shop_card_9.tscn" id="21_2cjbq"]
[ext_resource type="PackedScene" uid="uid://b0u7b6jmk8wf0" path="res://prefabs/shop_card_10.tscn" id="22_chjal"]
[ext_resource type="Script" uid="uid://dilh0cbg7eh1t" path="res://scripts/pot_pool.gd" id="22_jscy8"]
[ext_resource type="PackedScene" uid="uid://bfwbrulhski62" path="res://prefabs/overlay.tscn" id="22_pm3ni"]
[ext_resource type="Script" uid="uid://bger7r7x2nd6g" path="res://scripts/available_cards.gd" id="23_fuf3a"]
[ext_resource type="PackedScene" uid="uid://df5gtiilxy7p0" path="res://prefabs/card_piedestal.tscn" id="24_pibwh"]
[ext_resource type="PackedScene" uid="uid://bm4xt08l3xikc" path="res://prefabs/draw_pile_card_jack.tscn" id="39_5poiv"]
[ext_resource type="Texture2D" uid="uid://dfjixqwta2ylg" path="res://sprites/bg.png" id="40_5he1u"]
[ext_resource type="PackedScene" uid="uid://bd3w2r4cnlrws" path="res://prefabs/draw_pile_card_king.tscn" id="40_chjal"]
[ext_resource type="PackedScene" uid="uid://ph6yb08h0wl3" path="res://prefabs/draw_pile_card_queen.tscn" id="41_cjqg0"]

[node name="main" type="Node2D" node_paths=PackedStringArray("draw_pile", "money")]
script = ExtResource("1_og1vs")
draw_pile = NodePath("camera/draw_pile")
money = NodePath("board/pot/money")

[node name="board" type="Node2D" parent="."]

[node name="shop_or_double_down" type="Node2D" parent="board"]
visible = false
position = Vector2(-278, -154)

[node name="shop" parent="board/shop_or_double_down" node_paths=PackedStringArray("overlay", "deck", "camera") instance=ExtResource("5_og1vs")]
position = Vector2(253, 272)
overlay = NodePath("../../../camera/overlay")
deck = NodePath("../../../camera/deck")
camera = NodePath("../../../camera")

[node name="hit_me_or_stay" type="Node2D" parent="board"]
position = Vector2(-278, -154)

[node name="hit_me_button" parent="board/hit_me_or_stay" node_paths=PackedStringArray("deck") instance=ExtResource("2_0wfyh")]
position = Vector2(449, 272)
deck = NodePath("../../../camera/deck")

[node name="stay_button" parent="board/hit_me_or_stay" node_paths=PackedStringArray("deck", "hit_me_or_stay_buttons") instance=ExtResource("4_muem4")]
position = Vector2(253, 272)
deck = NodePath("../../../camera/deck")
hit_me_or_stay_buttons = NodePath("..")

[node name="player_score" type="Node2D" parent="board" node_paths=PackedStringArray("player_hand", "score_text")]
position = Vector2(-162, -42)
script = ExtResource("5_jbj1t")
player_hand = NodePath("../player_hand")
score_text = NodePath("visual/text")

[node name="visual" type="Node2D" parent="board/player_score"]

[node name="sprite" type="Sprite2D" parent="board/player_score/visual"]
texture_filter = 1
position = Vector2(0, 8)
texture = ExtResource("6_fuf3a")

[node name="hand" type="Label" parent="board/player_score/visual"]
self_modulate = Color(0.972549, 0.901961, 0.815686, 1)
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_kmb1v")
text = "HAND"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text" type="Label" parent="board/player_score/visual"]
self_modulate = Color(0.972549, 0.901961, 0.815686, 1)
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 4.5
offset_right = 20.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_kmb1v")
text = "ASD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player_hand" type="Node2D" parent="board"]
position = Vector2(-56, -94)
script = ExtResource("5_tbgi4")

[node name="pot" type="Node2D" parent="board" node_paths=PackedStringArray("money", "score", "shop_or_double_down")]
position = Vector2(-278, -154)
script = ExtResource("10_y6deb")
money = NodePath("money")
score = NodePath("score")
shop_or_double_down = NodePath("../shop_or_double_down")

[node name="money" type="Node2D" parent="board/pot" node_paths=PackedStringArray("texts")]
position = Vector2(109, 211)
script = ExtResource("22_jscy8")
texts = [NodePath("visual/text"), NodePath("visual2/text")]

[node name="visual2" type="Node2D" parent="board/pot/money"]
position = Vector2(1007, -7)

[node name="sprite" type="Sprite2D" parent="board/pot/money/visual2"]
texture_filter = 1
texture = ExtResource("11_c6pm6")

[node name="hand" type="Label" parent="board/pot/money/visual2"]
self_modulate = Color(0.972549, 0.901961, 0.815686, 1)
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -19.5
offset_right = 20.0
offset_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_kmb1v")
text = "MONE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text" type="Label" parent="board/pot/money/visual2"]
self_modulate = Color(0.972549, 0.901961, 0.815686, 1)
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -3.5
offset_right = 20.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_kmb1v")
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="visual" type="Node2D" parent="board/pot/money"]
position = Vector2(7, -7)

[node name="sprite" type="Sprite2D" parent="board/pot/money/visual"]
texture_filter = 1
texture = ExtResource("11_c6pm6")

[node name="hand" type="Label" parent="board/pot/money/visual"]
self_modulate = Color(0.972549, 0.901961, 0.815686, 1)
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -19.5
offset_right = 20.0
offset_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_kmb1v")
text = "MONE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text" type="Label" parent="board/pot/money/visual"]
self_modulate = Color(0.972549, 0.901961, 0.815686, 1)
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -3.5
offset_right = 20.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_kmb1v")
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Node2D" parent="board/pot" node_paths=PackedStringArray("texts")]
position = Vector2(122, 162)
script = ExtResource("22_jscy8")
texts = [NodePath("visual/text")]

[node name="visual" type="Node2D" parent="board/pot/score"]
position = Vector2(-6, 0)

[node name="sprite" type="Sprite2D" parent="board/pot/score/visual"]
texture_filter = 1
texture = ExtResource("11_pibwh")

[node name="text" type="Label" parent="board/pot/score/visual"]
self_modulate = Color(0.972549, 0.901961, 0.815686, 1)
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -3.5
offset_right = 20.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_kmb1v")
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hand" type="Label" parent="board/pot/score/visual"]
self_modulate = Color(0.972549, 0.901961, 0.815686, 1)
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -19.5
offset_right = 20.0
offset_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_kmb1v")
text = "SCOR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score_counter" parent="board" node_paths=PackedStringArray("score", "overlay", "player_score", "deck", "player_hand") instance=ExtResource("9_j8jky")]
score = NodePath("../pot/score")
overlay = NodePath("../../camera/overlay")
player_score = NodePath("../player_score")
deck = NodePath("../../camera/deck")
player_hand = NodePath("../player_hand")

[node name="shop" type="Node2D" parent="."]
position = Vector2(1000, 0)

[node name="items" type="Node2D" parent="shop"]
script = ExtResource("13_2f3dj")
shop_card_2 = ExtResource("12_y6deb")
shop_card_3 = ExtResource("15_kmb1v")
shop_card_4 = ExtResource("16_fuf3a")
shop_card_5 = ExtResource("17_pibwh")
shop_card_6 = ExtResource("18_c6pm6")
shop_card_7 = ExtResource("19_5he1u")
shop_card_8 = ExtResource("20_5poiv")
shop_card_9 = ExtResource("21_2cjbq")
shop_card_10 = ExtResource("22_chjal")

[node name="available_cards" type="Node2D" parent="shop" node_paths=PackedStringArray("items")]
position = Vector2(-30, -124)
script = ExtResource("23_fuf3a")
items = NodePath("../items")
card_piedestal = ExtResource("24_pibwh")

[node name="return_to_board" type="Node2D" parent="shop"]
position = Vector2(-278, -154)

[node name="return_to_board" parent="shop/return_to_board" node_paths=PackedStringArray("camera") instance=ExtResource("14_vxglm")]
position = Vector2(253, 272)
camera = NodePath("../../../camera")

[node name="camera" type="Camera2D" parent="." node_paths=PackedStringArray("shop", "available_cards", "board", "overlay", "shop_or_double_down", "hit_me_or_stay")]
script = ExtResource("14_2wyq8")
shop = NodePath("../shop")
available_cards = NodePath("../shop/available_cards")
board = NodePath("../board")
overlay = NodePath("overlay")
shop_or_double_down = NodePath("../board/shop_or_double_down")
hit_me_or_stay = NodePath("../board/hit_me_or_stay")

[node name="deck" parent="camera" node_paths=PackedStringArray("draw_pile", "player_hand", "player_score", "overlay", "score_counter", "pot") instance=ExtResource("1_jbj1t")]
position = Vector2(-162, -94)
draw_pile = NodePath("../draw_pile")
player_hand = NodePath("../../board/player_hand")
player_score = NodePath("../../board/player_score")
overlay = NodePath("../overlay")
score_counter = NodePath("../../board/score_counter")
pot = NodePath("../../board/pot")

[node name="draw_pile" type="Node2D" parent="camera"]
position = Vector2(-262, -116)
script = ExtResource("6_o6xl0")

[node name="card" parent="camera/draw_pile" instance=ExtResource("4_tefeu")]

[node name="card2" parent="camera/draw_pile" instance=ExtResource("8_jkv2x")]

[node name="card3" parent="camera/draw_pile" instance=ExtResource("9_jbj1t")]

[node name="card4" parent="camera/draw_pile" instance=ExtResource("10_muem4")]

[node name="card5" parent="camera/draw_pile" instance=ExtResource("11_dp3eg")]

[node name="card6" parent="camera/draw_pile" instance=ExtResource("12_0ld40")]

[node name="card7" parent="camera/draw_pile" instance=ExtResource("13_gqmmt")]

[node name="card8" parent="camera/draw_pile" instance=ExtResource("14_yc10j")]

[node name="card9" parent="camera/draw_pile" instance=ExtResource("15_jscy8")]

[node name="card10" parent="camera/draw_pile" instance=ExtResource("39_5poiv")]

[node name="card11" parent="camera/draw_pile" instance=ExtResource("40_chjal")]

[node name="card12" parent="camera/draw_pile" instance=ExtResource("41_cjqg0")]

[node name="overlay" parent="camera" node_paths=PackedStringArray("score_counter", "hit_me_or_stay") instance=ExtResource("22_pm3ni")]
position = Vector2(-262, -151)
score_counter = NodePath("../../board/score_counter")
hit_me_or_stay = NodePath("../../board/hit_me_or_stay")

[node name="bg" type="Sprite2D" parent="camera"]
z_index = -100
texture_filter = 1
position = Vector2(-294, 0)
texture = ExtResource("40_5he1u")
